<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_inicio"
                android:icon="@drawable/ic_play_circle_filled_black_24dp"
                android:title="@string/menu_inicio"/>
        <item
                android:id="@+id/nav_puntos"
                android:icon="@drawable/chart_bar"
                android:title="@string/menu_puntos"/>
        <item
                android:id="@+id/nav_guide"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_guide"/>
        <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_salir"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
