<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registro_usuario">
    <TextView
            android:text="@string/q_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username" android:layout_marginTop="116dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp" android:layout_marginStart="80dp" app:fontFamily="sans-serif"
            android:typeface="sans" android:textSize="18sp" android:textColor="@color/textoApp"/>
    <EditText
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNombre" android:hint="@string/hint_string"
            android:textColorLink="@color/textoApp" android:textColorHint="@color/btngray"
            android:textColor="@color/textoButton"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" android:layout_marginStart="28dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"/>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnJugar" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="196dp" android:layout_marginStart="196dp" android:background="@color/btn_color"/>
</android.support.constraint.ConstraintLayout>